# garden-rs

./: .gitignore  Cargo.toml  build.rs  mappings.sb
src/: console.rs  coro_util.rs  flower.rs  main.rs  paper.rs  particle.rs  resources.rs  webgl.rs
src/bindings/: console.rs  emscripten.rs
src/js/: console.js
src/rendering/: mesh_builder.rs  shader.rs  types.rs
