[package]
name = "garden"
version = "0.1.0"
authors = ["manpat <pat@patsown.com>"]
build = "build.rs"

[dependencies]
# common = { path = "../common" }
# common = { git = "https://github.com/manpat/common-rs.git" }

web-common = { git = "https://github.com/manpat/web-common-rs.git" }
# web-common = { path = "../web-common" }
