[package]
name = "garden"
version = "0.1.0"
authors = ["manpat <pat@patsown.com>"]
build = "build.rs"

[dependencies]
web-common = { git = "https://github.com/manpat/web-common-rs.git" }
common = { git = "https://github.com/manpat/common-rs.git", branch = "cruft-resurrection" }

[patch.'https://github.com/manpat/common-rs.git']
# the extra slash here is a hack to work around a known issue with [patch]
common = { git = "https://github.com/manpat//common-rs.git", branch = "cruft-resurrection" }
